--- a/style.css
+++ b/style.css
@@ -107,12 +107,11 @@
 }
 
 .Titulo{
-    font-size: 24px; /* Ajuste para um tamanho mais proporcional */
+    font-size: 24px;
     margin-top: 25px;
     text-align: left;
     padding-left: 20px;
-    font-family: Impact, fantasy; /* Fonte moderna */
-    color: #000000; /* Cor escura para contraste */
+    font-family: Impact, fantasy; 
 }
 
 .Resumo{
@@ -121,8 +120,8 @@
     text-align: left;
     padding-left: 20px;
     padding-right: 20px;
-    font-family: 'Roboto', sans-serif; /* Fonte moderna */
-    color: #555; /* Cor mais suave para o texto secundário */
+    font-family: 'Roboto', sans-serif; 
+    color: #555; 
 }
 
 .divLogo {
@@ -148,8 +147,7 @@
 
  .detalheContainer {
     display: flex;
-    border-top: 1px solid #e7e7e7;
-    margin-top: 20px;
+    margin-top: 25px;
     padding: 40px 50px;
 
  }
@@ -159,9 +157,89 @@
     height: 400px;
     object-fit: contain;
     display: block; 
-    position: absolute; 
+    position: absolute;
     margin-top: 30px;
     left: 70px;
     box-shadow: -1px -1px 20px 12px rgb(189 166 166 / 10%);
     border-radius: 8px;
  }
+
+.tituloDetalhes {
+
+    position: relative;
+    bottom: 15px;
+    left: 35px;
+    color: #454546;
+    font-family: Impact, fantasy; 
+    letter-spacing: 3px;
+}   
+
+.detalheConteudo {
+    display: flex;
+    flex-direction: column;
+        
+}
+.detalheExemplo {
+
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    left: 600px;
+    font-family: 'Roboto', sans-serif; 
+    font-weight: bold;
+    font-size: 14px;
+
+    color: #454546; 
+
+}
+
+.codigoExemplo {
+    font-family: 'Consolas', 'Courier New', monospace; 
+    position: absolute;
+    top: 40px;
+    left: 50%;
+    background-color: #f8f8f8; 
+    padding: 10px; ;
+    padding-right: 370px;
+    border-radius: 5px;
+    border: solid 1px #e7e7e7; 
+    margin-top: 10px; 
+    font-size: 14px;
+    color: #333;
+}
+
+
+.detalheExemploTexto {
+    border-top: 1px solid #e7e7e7;
+    padding-top: 20px;
+    font-family: 'Roboto', sans-serif; 
+    font-size: 14px;
+    color: #555; 
+    margin-left: 600px;
+    margin-top: 100px;
+    position: relative;
+    top: 300px;
+    width: 870px;
+}
+
+.detalheTexto {
+    font-size: 15px;
+    margin-top: 20px;
+    line-height: 1.5; 
+    letter-spacing: 1.2px; 
+    text-align: justify;
+    padding-bottom: 100px;
+}
+
+.divVideo {
+    position: absolute;
+    top: 650px;
+    left: 70px;
+}
+
+.video {
+    width: 400px;
+    height: 250px;
+    border-radius: 8px;
+    box-shadow: -1px -1px 20px 12px rgb(189 166 166 / 10%);
+}
