--- a/style.css
+++ b/style.css
@@ -293,7 +293,8 @@ header {
     font-family: 'Consolas', 'Courier New', monospace; 
     position: absolute;
     top: 40px;
-    left: 50%;
+    left: 45%;
+    width: 45vw;
     background-color: #f8f8f8; 
     padding: 10px; ;
     padding-right: 370px;
